--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </div>
 
     <div class="w-full bg-[#F6F5F5] py-20">
-        <div class="max-w-screen-xl mx-auto flex justify-between w-full items-center gap-10">
+        <div class="max-w-screen-xl mx-auto flex justify-between w-full items-center gap-10 ml-10">
             <div class="flex flex-col gap-5 w-1/2 items-start">
                 <h1 class="text-4xl font-semibold">Education</h1>
                 <div class="flex flex-col gap-2">
