--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
           class=""
           src="img/person.png"
           alt=""
-          width="60"
-          height="60"
+          width="50"
+          height="50"
           srcset=""
         />
         <ul class="inline-flex gap-12 items-center font-semibold">
@@ -37,67 +37,51 @@
       </nav>
     </div>
 
-    <div
-      class="max-w-screen-xl w-full px-24 text-5xl justify-between my-24 grid grid-cols-2 gap-16"
-    >
-      <div class="">
-        <div class="font-bold ml-4">
-          <span class="block mt-12"
-            >Hello, I`m <span class="text-[#FF4D1C]">Muhammad</span></span
-          >
-          <span class="text-[#FF4D1C]">Taufan Alvariezi</span>
-          <div class="flex space-x-4 mt-7">
-            <a
+      <div class="max-w-screen-xl mx-auto justify-center items-center flex py-20">
+        <div class="flex justify-between items-start gap-10 w-full">
+            <div class="flex flex-col gap-6 w-1/2">
+                <h1 class="text-6xl font-bold leading-snug">Hello I’m <span class="text-[#FF4D1C]">Muhammad</span><span class="block text-[#FF4D1C]"> Taufan Alvariezi</span></h1>
+                <div class="w-1/2 inline-flex gap-5">
+                    <a
               href=""
               class="w-10 h-10 bg-white border border-[#6725EA] rounded-full flex items-center justify-center hover:bg-gray-300"
             >
               <img src="img/ig.svg" alt="" srcset="" />
             </a>
             <a
-              href=""
-              class="w-10 h-10 bg-white border border-[#6725EA]  rounded-full flex items-center justify-center hover:bg-gray-300"
-            >
-              <img src="img/fb.svg" alt="" srcset="" />
-            </a>
-            <a
-              href=""
-              class="w-10 h-10 bg-white border border-[#6725EA]  rounded-full flex items-center justify-center hover:bg-gray-300"
-            >
-              <img src="img/gt.svg" alt="" srcset="" />
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="font-bold ml-10">
-        <span class="text-[#6725EA]"
-          >a Website Designer Based in Banyuwangi,Indonesia.</span
-        >
-        <span class="text-gray-400 font-normal text-lg ">a Passionate about UI/UX Design and Web development</span>
-     <div class="flex space-x-4 mt-4">
-        <a href="">
-            <button
-              class="px-3 py-2 bg-[#6725EA] text-white text-xl font-normal rounded-xl hover:bg-[#3c1686] border border-[#6725EA] hover:text-white"
-            >
-              Contact Me
-            </button>
+            href=""
+            class="w-10 h-10 bg-white border border-[#6725EA]  rounded-full flex items-center justify-center hover:bg-gray-300"
+          >
+            <img src="img/fb.svg" alt="" srcset="" />
           </a>
-          <a href="">
-            <button
-              class="px-3 py-2 bg-white text-[#6725EA] text-xl font-normal rounded-xl border border-[#6725EA]"
-            >
-              See Portfolio
-            </button>
+          <a
+            href=""
+            class="w-10 h-10 bg-white border border-[#6725EA]  rounded-full flex items-center justify-center hover:bg-gray-300"
+          >
+            <img src="img/gt.svg" alt="" srcset="" />
           </a>
-     </div>
-      </div>
+                </div>
+            </div>
 
+            <div class="w-1/2 flex flex-col gap-5">
+                <h1 class="text-4xl font-semibold leading-snug text-[#6725EA]">a Website Designer Based in Banyuwangi,Indonesia.</h1>
+                <h3 class="text-3xl text-gray-600">a passionate about UI/UX Design and Web development</h3>
+                <div class="flex items-center gap-2">
+                    <button
+                        class="px-4 py-2 bg-[#6725EA] text-white rounded-xl transition-all duration-200 hover:bg-white border border-[#6725EA] hover:text-[#6725EA]">Contact
+                        me</button>
+                    <button class="px-4 py-2 transition-all duration-200   rounded-xl text-[#6725EA] hover:bg-[#6725EA] border border-[#6725EA] hover:text-white">See
+                        Portfolio<button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="w-full bg-[#F6F5F5] py-20">
-        <div class="max-w-screen-xl mx-auto flex justify-between w-full items-center gap-10 ml-10">
+        <div class="max-w-screen-xl mx-auto flex justify-between w-full items-center gap-10">
             <div class="flex flex-col gap-5 w-1/2 items-start">
                 <h1 class="text-4xl font-semibold">Education</h1>
-                <div class="flex flex-col gap-2">
+                <div class="flex flex-col gap-4">
                     <div class="inline-flex gap-3">
                         <img src="img/award.svg" alt="">
                         <div class="flex flex-col gap-1">
