--- a/index.html
+++ b/index.html
@@ -190,9 +190,24 @@
             <h1 class="text-gray-500 text-xl">©Copyright 2024 - Taufan Alvariezi</h1>
         </div>
         <div class="w-1/2 flex items-center justify-end gap-5">
-            <img src="img/ig.svg" alt="">
-            <img src="img/fb.svg" alt="">
-            <img src="img/gt.svg" alt="">
+            <a
+            href=""
+            class="w-10 h-10 bg-white border border-[#6725EA] rounded-full flex items-center justify-center hover:bg-gray-300"
+          >
+            <img src="img/ig.svg" alt="" srcset="" />
+          </a>
+          <a
+          href=""
+          class="w-10 h-10 bg-white border border-[#6725EA]  rounded-full flex items-center justify-center hover:bg-gray-300"
+        >
+          <img src="img/fb.svg" alt="" srcset="" />
+        </a>
+        <a
+          href=""
+          class="w-10 h-10 bg-white border border-[#6725EA]  rounded-full flex items-center justify-center hover:bg-gray-300"
+        >
+          <img src="img/gt.svg" alt="" srcset="" />
+        </a>
         </div>
     </div>
 
