--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li>
             <a href="">
               <button
-                class="px-4 py-2 bg-[#6725EA] text-white rounded-full hover:bg-white border border-[#6725EA] hover:text-[#6725EA]"
+                class="px-4 py-2 bg-[#6725EA] text-white rounded-xl hover:bg-white border border-[#6725EA] hover:text-[#6725EA]"
               >
                 Contact Me
               </button>
@@ -40,7 +40,7 @@
       <div class="max-w-screen-xl mx-auto justify-center items-center flex py-20">
         <div class="flex justify-between items-start gap-10 w-full">
             <div class="flex flex-col gap-6 w-1/2">
-                <h1 class="text-6xl font-bold leading-snug">Hello I’m <span class="text-[#FF4D1C]">Muhammad</span><span class="block text-[#FF4D1C]"> Taufan Alvariezi</span></h1>
+                <h1 class="text-6xl font-bold leading-snug">Hello I’m <span class="text-[#6725EA]">Muhammad</span><span class="block text-[#6725EA]"> Taufan Alvariezi</span></h1>
                 <div class="w-1/2 inline-flex gap-5">
                     <a
               href=""
